--- a/views/edit_cuisine.hbs
+++ b/views/edit_cuisine.hbs
@@ -34,23 +34,23 @@
 <div class="form-fields" id="update-cuisine-form" style="display: block">
 
 <h2>Update a Cuisine's Details:</h2>
-<p>Please enter the new name for the cuisine.</p>
-<p><small>Note: * indicates a required field.</small></p>
-  <h4>Please Complete All Fields</h4>
-    <form action="/cuisines/edit_cuisine.html/{{data.0.cuisine_id}}" id="edit_cuisine_form" method="POST">
-        <input type="hidden" value="{{data.0.cuisine_id}}" class="form-control" id="cuisine_id" name="cuisine_id" required>
+<p>Please enter all required fields to be updated.<br>
+<small>Note: * indicates a required field.</small></p>
 
-        <p><label for="cuisine_name">* Cuisine Name:</label>
-        <input type="text" id="cuisine_name" name="cuisine_name" value="{{data.0.cuisine_name}}" required></p>
-        
-        <input type="submit" value="Edit Cuisine" name="editCuisine" id="edit-cuisine-button" class="btn btn-primary" 
-          onClick="if (validateForm()) {alert(`Successfully updated Cuisine ID #{{data.0.cuisine_id}}`)};">
+  <form action="/cuisines/edit_cuisine.html/{{data.0.cuisine_id}}" id="edit_cuisine_form" method="POST">
+      <input type="hidden" value="{{data.0.cuisine_id}}" class="form-control" id="cuisine_id" name="cuisine_id" required>
 
-        <input type="reset" class="btn btn-secondary">
+      <p><label for="cuisine_name">* Cuisine Name:</label>
+      <input type="text" id="cuisine_name" name="cuisine_name" value="{{data.0.cuisine_name}}" required></p>
+      
+      <input type="submit" value="Edit Cuisine" name="editCuisine" id="edit-cuisine-button" class="btn btn-primary" 
+        onClick="if (validateForm()) {alert(`Successfully updated Cuisine ID #{{data.0.cuisine_id}}`)};">
 
-        <a href='/cuisines'><input class="btn btn-secondary" type="button" value="Cancel"></a>
+      <input type="reset" class="btn btn-secondary">
 
-    </form>
+      <a href='/cuisines'><input class="btn btn-secondary" type="button" value="Cancel"></a>
+
+  </form>
 
 <script>
     // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
