--- a/views/edit_restaurant_cuisine.hbs
+++ b/views/edit_restaurant_cuisine.hbs
@@ -34,9 +34,9 @@
 <div class="form-fields" id="update-restaurant-cuisine" style="display: block">
 
 <h2>Update a Restaurant-Cuisine's Association:</h2>
-<p>Please select the Restaurant and Cuisine you would like to update to.</p>
-<p><small>Note: * indicates a required field. Old values are listed above the dropdown options.</small></p>
-<h4>Please Complete All Fields</h4>
+<p>Please select the Restaurant and Cuisine you would like to update to.</br>
+<small>Note: * indicates a required field. Old values are listed above the dropdown options.</small></p>
+
     <form action="/restaurant_has_cuisines/edit_restaurant_cuisine.html/{{data.0.restaurant_cuisine_id}}" id="edit_restaurant_cuisine_form" method="POST">
         <input type="hidden" value="{{data.0.restaurant_cuisine_id}}" class="form-control" id="restaurant_cuisine_id" name="restaurant_cuisine_id" required>
 
