--- a/views/edit_city.hbs
+++ b/views/edit_city.hbs
@@ -34,16 +34,14 @@
 <div class="form-fields" id="update-city-form" style="display: block">
 
 <h2>Update a City's Details:</h2>
-<p>Please enter the new name for the city.</p>
-<p><small>Note: * indicates a required field.</small></p>
-
-<h4>Please Complete All Fields</h4>
+<p>Please enter all required fields to be updated.<br>
+<small>Note: * indicates a required field.</small></p>
 
     <form action="/cities/edit_city.html/{{data.0.city_id}}" id="edit_city_form" method="POST">
 
         <input type="hidden" value="{{data.0.city_id}}" class="form-control" id="city_id" name="city_id" required>
 
-        </p><label for="city_name">* City Name:</label>
+        <p><label for="city_name">* City Name:</label>
         <input type="text" id="city_name" name="city_name" value="{{data.0.city_name}}" required></p>
 
         <input type="submit" value="Edit City" name="editCity" id="edit-city-button" class="btn btn-primary" 
