--- a/views/edit_city.hbs
+++ b/views/edit_city.hbs
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<script src="./js/validateForms.js"></script>
 
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <a class="navbar-brand" href="/">Grubmaster</a>
@@ -45,7 +46,7 @@
         <input type="text" id="city_name" name="city_name" value="{{data.0.city_name}}" required></p>
 
         <input type="submit" value="Edit City" name="editCity" id="edit-city-button" class="btn btn-primary" 
-            onClick="if (validateForm()) {alert(`Successfully updated City ID #{{data.0.city_id}}`)};">
+            onClick="validateForm({{data.0.city_id}});">
 
         <input type="reset" class="btn btn-secondary">
 
@@ -56,7 +57,7 @@
 <script>
     // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
     // Checks if every required field is filled out before sending alert
-    function validateForm() {
+    function validateForm(rowID) {
         let requiredFields = document.getElementById('update-city-form')
             .querySelectorAll('[required]')
         let valid = []; 
@@ -67,7 +68,7 @@
         })
         let checker = arr => arr.every(v => v === true); 
         if (checker(valid)) {
-            return true;
+            alert(`Successfully Updated City ID #${rowID}! Refreshing page...`)
         }
     }
 </script>
