--- a/views/edit_restaurant.hbs
+++ b/views/edit_restaurant.hbs
@@ -57,8 +57,10 @@
             {{/each}}
         </select></p>
 
+        
+
         <input type="submit" value="Edit Restaurant" name="editRestaurantButton" id="edit-restaurant-button" class="btn btn-primary"
-            onClick="if (validateForm()) {alert(`Successfully updated Restaurant ID #{{data.0.restaurant_id}}`)};">
+            onClick="validateForm({{data.0.restaurant_id}});">
 
         <input type="reset" class="btn btn-secondary">
 
@@ -69,7 +71,7 @@
 <script>
     // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
     // Checks if every required field is filled out before sending alert
-    function validateForm() {
+    function validateForm(rowID) {
         let requiredFields = document.getElementById('update-restaurant-form')
             .querySelectorAll('[required]')
         let valid = []; 
@@ -80,7 +82,7 @@
         })
         let checker = arr => arr.every(v => v === true); 
         if (checker(valid)) {
-            return true;
+            alert(`Successfully Updated Restaurant ID #${rowID}! Refreshing page...`)
         }
     }
 </script>
