--- a/views/restaurants.hbs
+++ b/views/restaurants.hbs
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit="yes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
-    <script type="text/javascript" src="/jquery/jquery-3.6.0.min.js"></script>
     {{!-- <link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css"/> --}}
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
-<script language="Javascript" src='./js/restaurants_ShowHideCRUD.js'></script>
-
 <body onload='browseRestaurants()'>
+<script language="Javascript" src='./js/restaurants_ShowHideCRUD.js'></script>
 <script src="./js/restaurants_delete.js"></script> 
+<script src="./js/scrollToForm.js"></script>
+<script src="./js/validateForms.js"></script>
 
 {{!-- The Data from our database --}}
 
@@ -23,9 +23,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="/">Grubmaster</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  {{!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button> --}}
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="/">Home<span class="sr-only"></span></a>
@@ -36,15 +36,23 @@
       <a class="nav-item nav-link" href="/reviews">Reviews</a>
       <a class="nav-item nav-link" href="/restaurant_has_cuisines">Restaurants' Cuisines</a>
     </div>
+
   </div>
 
 </nav>
 
 </div>
+
 <p>&nbsp;</p>
 
 <div id="browse-restaurants">
-    <p><button type="button" class="btn btn-primary" href="restaurants/add-restaurant" onClick="newRestaurant()">Add a New Restaurant</button></p>
+    <div class="add-search">
+    <p><button type="button" class="btn btn-primary" href="restaurants/add-restaurant" onClick="newRestaurant(); scrollToForm('add-restaurant');">Add a New Restaurant</button></p>
+    <form class="form-inline" id="search-bar">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button type="button" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    </div>
 
     <table id="restaurants-table" 
     class="table table-striped table-bordered table-hover" 
@@ -105,10 +113,11 @@
         <a href="/restaurants"><input type="button" value="Reset"></a>
     </form>
 </div>
+
 <p>&nbsp;</p>
 
 {{!-- Add restaurant using HTML --}}
-<div class="form-fields" id="add-restaurant">
+<div class="form-fields" id="add-restaurant" style="display:block">
     <form id="add-restaurant-form" method="POST" action="/restaurants/add-restaurant-form">
     <h2>Add a new restaurant: </h2>
     <p>To add a new restaurant, please enter the information below and click 'Submit'! </p> 
@@ -131,29 +140,10 @@
             {{/each}}
         </select></p>
 
-        <p><input type="submit" id="addRestaurant" value="Submit" class="btn btn-primary" onClick="return validateForm();"> 
+        <p><input type="submit" id="addRestaurant" value="Submit" class="btn btn-primary" onClick="validateAddForm('add-restaurant-form');"> 
         <input type="button" value="Cancel" onClick="browseRestaurants()" class="btn btn-secondary"></p>
     </form>
 </div>
-
-<script>
-    // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
-    // Checks if every required field is filled out before sending alert
-    function validateForm() {
-        let requiredFields = document.getElementById('add-restaurant-form')
-            .querySelectorAll('[required]')
-        let valid = []; 
-        requiredFields.forEach((element) => {
-            if (element.value !== "") {
-                valid.push(true)
-            } else {valid.push(false)}
-        })
-        let checker = arr => arr.every(v => v === true); 
-        if (checker(valid)) {
-            alert('Successfully added new restaurant!')
-        }
-    }
-</script>
 
 <p>&nbsp;</p>
 
