--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,34 @@
 body {
   padding-top: 10px; 
-  padding-right: 200px; 
-  padding-left: 200px;
+  padding-right: 100px; 
+  padding-left: 100px;
   margin: auto;
   align-content: center; 
   background-color: #E2D2C1;
 }
 
+.app-desc {
+  border: 3px solid;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+#app-desc-nav {
+  border: 3px solid;
+  margin: auto;
+  width: 50%;
+  justify-content: center;
+}
+
 /* Default Table Style */
 table {
-    table-layout: auto;
-    display: table; 
     justify-content: center;
-    align-items: center;
     text-align: center;
     margin: auto;
     color: #333;
     background: white;
     border: 1px solid black;
-    font-size: 12pt;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-collapse: collapse;
 }
@@ -28,7 +38,7 @@ thead {
     background: red;
 }
 
-tr:hover {background-color: lightgrey;}
+/* tr:hover {background-color: lightgrey;} */
 
 table th,
 table td {
@@ -42,16 +52,11 @@ h1 {
 
 .form-fields {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding: 10px;
+  padding: 5px;
   border: 2px solid #333;
   margin: auto;
-  padding: 10px;
   top: 30px;
-  width: 80%
-}
-
-body {
-  align-self: center;
+  width: 75%;
 }
 
 /* Zebra Table Style */
