--- a/views/cities.hbs
+++ b/views/cities.hbs
@@ -20,12 +20,7 @@
 <div id="top">
 <h1 align="center">Cities</h1>
 
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Grubmaster</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="/">Home<span class="sr-only"></span></a>
       <a class="nav-item nav-link" href="/restaurants">Restaurants</a>
@@ -35,8 +30,6 @@
       <a class="nav-item nav-link" href="/reviews">Reviews</a>
       <a class="nav-item nav-link" href="/restaurant_has_cuisines">Restaurants' Cuisines</a>
     </div>
-
-  </div>
 </nav>
 
 </div>
@@ -66,10 +59,10 @@
     {{!-- Body section --}}
     <tbody>
         {{#each data}}
-        <tr align="center" data-value={{this.city_id}}>
+        <tr scope="row" data-value={{this.city_id}}>
             <td id="city_id">{{this.city_id}}</td>
             <td id="city_name">{{this.city_name}}</td>
-            <td><a href="/cities/edit_city.html/{{this.city_id}}" class="btn btn-warning active" role="button" aria-pressed="true">Edit</a></td>
+            <td><a href="/cities/edit_city.html/{{this.city_id}}" class="btn btn-warning" role="button">Edit</a></td>
         </tr>
         {{/each}}
     </tbody>
@@ -101,7 +94,7 @@
         <input type="text" name="input-city-name" id="input-city-name" required></p> 
 
         <p><input type="submit" id="addCity" value="Submit" onClick="validateAddForm('add-city-form');" class="btn btn-primary"> 
-        <input type="button" value="Cancel" onClick="browseCities()" class="btn btn-secondary"></p>
+        <a href="/cities"><input type="button" value="Cancel" class="btn btn-secondary"></a></p>
         
     </form>
 </div>
