updated table styling

--- a/views/restaurant_has_cuisines.hbs
+++ b/views/restaurant_has_cuisines.hbs
@@ -16,6 +16,11 @@
 <script src="./js/scrollToForm.js"></script>
 <script src="./js/validateForms.js"></script>
 
+<script>
+$(document).ready(function () {
+    $('#restaurant-cuisines-table').DataTable();
+});
+</script>
 
 {{!-- The Data from our database --}}
 
