--- a/views/cuisines.hbs
+++ b/views/cuisines.hbs
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <title>Cuisines</title>
     <meta name="viewport" content="initial-scale=1, shrink-to-fit=yes">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
-    {{!-- <link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css"/> --}}
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
@@ -13,6 +11,12 @@
 <script language="Javascript" src='./js/cuisines_ShowHideCRUD.js'></script>
 <script src="./js/scrollToForm.js"></script>
 <script src="./js/validateForms.js"></script>
+
+<script>
+$(document).ready(function () {
+    $('#cuisines-table').DataTable();
+});
+</script>
 
 {{!-- The Data from our database --}}
 
