--- a/views/edit_restaurant.hbs
+++ b/views/edit_restaurant.hbs
@@ -10,12 +10,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Grubmaster</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="/">Home<span class="sr-only"></span></a>
       <a class="nav-item nav-link active" href="/restaurants">Restaurants</a>
@@ -25,11 +20,9 @@
       <a class="nav-item nav-link" href="/reviews">Reviews</a>
       <a class="nav-item nav-link" href="/restaurant_has_cuisines">Restaurants' Cuisines</a>
     </div>
-
-  </div>
 </nav>
 
-<p>&nbsp;</p>
+<p></p>
 
 <div class="form-fields" id="update-restaurant-form" style="display: block">
 
