Updated formatting of tables + background

--- a/views/cuisines.hbs
+++ b/views/cuisines.hbs
@@ -82,7 +82,7 @@ $(document).ready(function () {
         <label for="input-cuisine-name">Search by Cuisine Name: </label>
         <input type="text" name="cuisine_name" id="input-cuisine-name-search">
         
-        <input type="submit">
+        <input type="submit" value="Search">
         <a href="/cuisines"><input type="button" value="Reset"></a>
     </form>
 </div>
