--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@ body {
   padding-left: 100px;
   margin: auto;
   align-content: center; 
+  background-color: #E2D2C1;
 }
 
 .app-desc {
@@ -27,23 +28,24 @@ table {
     margin: auto;
     color: #333;
     background: white;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-collapse: collapse;
 }
 
 thead {
     color: white;
-    background: red;
+    background: #990F02;
+    /* background: #800000 */
 }
 
 /* tr:hover {background-color: lightgrey;} */
 
-table th,
+/* table th,
 table td {
   padding: .5em;
   border: 1px solid darkgrey;
-}
+} */
 
 h1 {
   color: black;
@@ -51,37 +53,9 @@ h1 {
 
 .form-fields {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding: 5px;
+  padding: 10px;
   border: 2px solid #333;
   margin: auto;
   top: 30px;
-  width: 75%;
-}
-
-/* Zebra Table Style */
-/* [data-table-theme*=zebra] tbody tr:nth-of-type(odd) {
-  background: rgba(0,0,0,.05);
-}
-[data-table-theme*=zebra][data-table-theme*=dark] tbody tr:nth-of-type(odd) {
-  background: rgba(255,255,255,.05);
-}  */
-/* Dark Style */
-/* [data-table-theme*=dark] {
-  color: #ddd;
-  background: #333;
-  font-size: 12pt;
-  border-collapse: collapse;
-}
-[data-table-theme*=dark] thead th,
-[data-table-theme*=dark] tfoot th {
-  color: #aaa;
-  background: rgba(0255,255,255,.15);
-}
-[data-table-theme*=dark] caption {
-  padding:.5em;
-}
-[data-table-theme*=dark] th,
-[data-table-theme*=dark] td {
-  padding: .5em;
-  border: 1px solid grey;
+  width: 50%;
 }
