updated reviews edit function

--- a/views/reviews.hbs
+++ b/views/reviews.hbs
@@ -5,25 +5,26 @@
 <head>
     <meta charset="utf-8">
     <title>Reviews</title>
-    <meta name="viewport" content="initial-scale=1, shrink-to-fit=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit="yes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit="yes">
     {{!-- <link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css"/> --}}
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
-<h2>Search Reviews</h2>
-<form id="search-review-html" method='GET' action='/reviews'>
-    <label for="input-lname">Search by Restaurant Name: </label>
-    <input type="text" name="review_restaurant_name" id="input-restaurant-name-html-search">
-    <input type="submit">
-    <a href='/reviews'><button>Reset</button></a>
-</form>
-<p>&nbsp;</p>
+<script language="Javascript" src='./js/reviews_ShowHideCRUD.js'></script>
+<body onload='browseReviews()'>
+
+<div id="browse-users">
+
+    <p><button href="/add-review" onClick="newReview()">Add a New Review</button></p>
+    <p><button href="/update-review" onClick="updateReview()">Update a Review</button></p>
 
 {{!-- Create a table --}}
-<table id="reviews-table">
+<table id="reviews-table" class="table table-striped table-bordered table-hover" align="center" data-search="true">
+    
     {{!-- Header section --}}
-    <thead>
+    <thead class="justify-content-center" align="center">
         {{!-- For just the first row, we print each key of the row object as a header cell so we
         know what each column means when the page renders --}}
         <tr id="headers">
@@ -53,68 +54,81 @@
         {{/each}}
     </tbody>
 </table>
+</div> 
 
 <p>&nbsp;</p>
+<div id="search-review" style="display: block">
+<h2>Search Reviews</h2>
+<form id="search-review-html" method='GET' action='/reviews'>
+    <label for="input-rname">Search by Restaurant Name: </label>
+    <input type="text" name="review_restaurant_name" id="input-rname-html-search">
+    <input type="submit">
+    <a href='/reviews'><button>Reset</button></a>
+</form>
+</div>
+<p>&nbsp;</p>
+
+<div id="add-review" style="display: block">
+<form method="POST" id="add-review-form-ajax">
 <h2>Add a Review</h2>
 <p>Add a new review to the database.</p>
-<div id="insert" style="display: block">
-  <form method="POST" id="add-review-form-ajax">
-        <fieldset class="fields">
-          <form class="p-1 mb-1 bg-light border-bottom">
-            <label>Restaurant: </label> 
-                <select name="review_restaurant_id" id="review_restaurant_id">
-                    <option value="">Select a Restaurant</option>
-                    {{#each restaurants}}
-                    <option value="{{this.restaurant_id}}">{{this.restaurant_name}}</option>
-                    {{/each}}
-                </select>
-            <label>Rating: </label>
-              <select name="review_restaurant_rating" id="review_restaurant_rating">
-                  <option value="">Select a Rating</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-              </select>
-            <label>User: </label> 
-                <select name="use_id" id="review_user_id">
-                    <option value="">Select a User</option>
-                    {{#each users}}
-                    <option value="{{this.user_id}}">{{this.user_first_name}} {{this.user_last_name}}</option>
-                    {{/each}}
-                </select>
-    </fieldset>
-        <input type="submit" id="add-review-form-ajax" value="Add Review">
-</form> 
-</div><!-- Add New Review -->
-
-<script src="./js/add_review.js"></script>
-
-<p>&nbsp;</p>
-<h2>Update A Review's Information</h2>
-<p>Use the search function to locate the correct Review ID, then update its rating information using this form.</p>
-<form id="update-review-form-ajax">
     <fieldset class="fields">
         <form class="p-1 mb-1 bg-light border-bottom">
-        <label>Review ID</label> 
-            <select name="review_id" id="selected_review_id">
-                <option value="">Select a Review ID</option>
-                {{#each data}}
-                <option value="{{this.review_id}}">{{this.review_id}}</option>
+        <label>Restaurant: </label> 
+            <select name="review_restaurant_id" id="review_restaurant_id">
+                <option value="">Select a Restaurant</option>
+                {{#each restaurants}}
+                <option value="{{this.restaurant_id}}">{{this.restaurant_name}}</option>
                 {{/each}}
-            </select>  
-        <label> Rating: </label>
-            <select name="review_restaurant_rating" id="updated_restaurant_rating">
+            </select>
+        <label>Rating: </label>
+            <select name="review_restaurant_rating" id="review_restaurant_rating">
                 <option value="">Select a Rating</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
                 <option value="5">5</option>
-            </select>             
-    </fieldset>
-    <input type="submit" id="update-review-form-ajax" value="Update Review">
-</form><!-- Update Review -->
+            </select>
+        <label>User: </label> 
+            <select name="use_id" id="review_user_id">
+                <option value="">Select a User</option>
+                {{#each users}}
+                <option value="{{this.user_id}}">{{this.user_first_name}} {{this.user_last_name}}</option>
+                {{/each}}
+            </select>
+        </fieldset>
+        <input type="submit" id="add-review-form-ajax" value="Add Review">
+    </form> 
+</div><!-- Add New Review -->
+
+<script src="./js/add_review.js"></script>
+
+<div id="update-review" style="display: bock">
+    <form id="update-review-form-ajax">
+    <h2>Update A Review's Information</h2>
+    <p>Use the search function to locate the correct ID, then update its rating information using this form.</p>
+        <fieldset class="fields">
+            <form class="p-1 mb-1 bg-light border-bottom">
+            <label>Review ID</label> 
+                <select name="review_id" id="selected_review_id">
+                    <option value="">Select a Review ID</option>
+                    {{#each data}}
+                    <option value="{{this.review_id}}">{{this.review_id}}</option>
+                    {{/each}}
+                </select>  
+            <label> Rating: </label>
+                <select name="review_restaurant_rating" id="updated_restaurant_rating">
+                    <option value="">Select a Rating</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>             
+        </fieldset>
+        <input type="submit" id="update-review-form-ajax" value="Update Review">
+    </form><!-- Update Review -->
+</div>
 
 <script src="./js/update_review.js"></script>
