--- a/views/edit_user.hbs
+++ b/views/edit_user.hbs
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Edit a User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit="yes">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
@@ -40,16 +39,16 @@
                     <fieldset>
                         <input type="hidden" value="{{data.0.user_id}}" class="form-control" id="user_id" name="user_id" required>
         
-                        <label for="user_first_name">* Name:</label><br>
+                        <label for="user_first_name">*First Name:</label><br>
                         <input type="text" id="user_first" name="user_first_name" value="{{data.0.user_first_name}}" required><br>
         
-                        <label for="user_last_name">Website:</label><br>
-                        <input type="text" id="user_last_name" name="user_last_name" value="{{data.0.user_last_name}}"><br>
+                        <label for="user_last_name">*Last Name:</label><br>
+                        <input type="text" id="user_last_name" name="user_last_name" value="{{data.0.user_last_name}}" required><br>
         
                         <label for="user_email_address">Email:</label><br>
-                        <input type="text" id="user_email_address" name="user_email_address" value="{{data.0.user_email_address}}"><br>
+                        <input type="text" id="user_email" name="user_email" value="{{data.0.user_email}}"><br>
         
-                        <p><label for="update-user-city">* Restaurant City: </label> 
+                        <p><label for="update-user-city">*City: </label> 
                         <select name="user_city" id="user_city" required>
                             <option value="">Select a City</option>
                             {{#each cities}}
@@ -60,9 +59,29 @@
                     </fieldset>
         
                     <input type="submit" value="Edit User" name="editUserButton" id="edit-user-button" class="btn btn-primary"
-                    onClick="if (validateForm()) {alert(`Successfully updated User ID #{{data.0.user_id}}`)};">
-        
-                    <input type="reset" class="btn btn-secondary">
+                    onClick="if (validateForm()) {alert(`Successfully updated User !`)};">
         
                     <a href='/users'><input class="btn btn-secondary" type="button" value="Cancel"></a>    
                 </form>
+
+    <script>
+    // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
+    // Checks if every required field is filled out before sending alert
+       function validateForm(rowID) {
+        let requiredFields = document.getElementById('update-user-form')
+            .querySelectorAll('[required]')
+        let valid = []; 
+        requiredFields.forEach((element) => {
+            if (element.value !== "") {
+                valid.push(true)
+            } else {valid.push(false)}
+        })
+        let checker = arr => arr.every(v => v === true); 
+        if (checker(valid)) {
+            alert(`Successfully Updated User ID #${rowID}! Refreshing page...`)
+        }
+    }
+</script>
+
+</body>
+</html>
