--- a/views/reviews.hbs
+++ b/views/reviews.hbs
@@ -1,35 +1,47 @@
 <!-- reviews.hbs -->
 
-[ <a href="/">Home</a> | <a href="/restaurants">Restaurants</a> | <a href="/users">Users</a> | <a href="/cities">Cities</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant_has_cuisines">Restaurants' Cuisines</a>]
-
 <head>
-    <meta charset="utf-8">
     <title>Reviews</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit="yes">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit="yes">
-    {{!-- <link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css"/> --}}
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
-<<<<<<< HEAD
+<div id="top">
+    <h1 align="center">Reviews</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/">Home<span class="sr-only"></span></a>
+            <a class="nav-item nav-link" href="/restaurants">Restaurants</a>
+            <a class="nav-item nav-link" href="/cuisines">Cuisines</a>
+            <a class="nav-item nav-link" href="/cities">Cities</a>
+            <a class="nav-item nav-link" href="/users">Users</a>
+            <a class="nav-item nav-link active" href="/reviews">Reviews</a>
+            <a class="nav-item nav-link" href="/restaurant_has_cuisines">Restaurants' Cuisines</a>
+        </div>
+    </nav>
+</div>
+
+<p></p>
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
 <script language="Javascript" src='./js/reviews_ShowHideCRUD.js'></script>
+<script src="./js/validateForms.js"></script>  
+<script src="./js/scrollToForm.js"></script>
 <body onload='browseReviews()'>
 
-<div id="browse-users">
+<script>
+$(document).ready(function () {
+    $('#reviews-table').DataTable();
+});
+</script>
 
-    <p><button href="/add-review" onClick="newReview()">Add a New Review</button></p>
-    <p><button href="/update-review" onClick="updateReview()">Update a Review</button></p>
-=======
-{{!-- <h2>Search Reviews</h2>
-<form id="search-review-html" method='GET' action='/reviews'>
-    <label for="input-lname">Search by Restaurant Name: </label>
-    <input type="text" name="review_restaurant_name" id="input-restaurant-name-html-search">
-    <input type="submit">
-    <a href='/reviews'><button>Reset</button></a>
-</form>
-<p>&nbsp;</p> --}}
->>>>>>> feef77c0667adbd7f2652a47356566aa1dd570fb
+<div id="browse-reviews">
+    <div class="add-search">
+    <p><button type="button" class="btn btn-primary" href="/add-review" onClick="newReview(); scrollToForm('add-review');">Add a New Review</button>
+       <button type="button" class="btn btn-primary" href="/update-review" onClick="updateReview(); scrollToForm('update-review')">Update a Review</button></p>
+</div>
 
 {{!-- Create a table --}}
 <table id="reviews-table" class="table table-striped table-bordered table-hover" align="center" data-search="true">
@@ -68,16 +80,17 @@
 </div> 
 
 <p>&nbsp;</p>
-<div id="search-review" style="display: block">
-<h2>Search Reviews</h2>
-<form id="search-review-html" method='GET' action='/reviews'>
-    <label for="input-rname">Search by Restaurant Name: </label>
-    <input type="text" name="review_restaurant_name" id="input-rname-html-search">
-    <input type="submit">
-    <a href='/reviews'><button>Reset</button></a>
-</form>
+
+<div class="form-fields" id="search-review" style="display: block">
+    <h2>Search for a Review below.</h2>
+    <p>Search by restaurant name using the field below. Partial names are OK too!</p>
+    <form id="search-review-html" method='GET' action='/reviews'>
+        <label for="input-rname">Search by Restaurant Name: </label>
+        <input type="text" name="review_restaurant_name" id="input-rname-html-search">
+        <input type="submit" value="Search">
+        <a href='/reviews'><button>Reset</button></a>
+    </form>
 </div>
-<p>&nbsp;</p>
 
 <div id="add-review" style="display: block">
 <form method="POST" id="add-review-form-ajax">
@@ -109,36 +122,38 @@
                 {{/each}}
             </select>
         </fieldset>
-        <input type="submit" id="add-review-form-ajax" value="Add Review">
+        <p><input type="submit" id="addReview" value="Submit" class="btn btn-primary"> 
+        <a href="/reviews"><input type="button" value="Cancel" class="btn btn-secondary"></a></p>
     </form> 
 </div><!-- Add New Review -->
 
 <script src="./js/add_review.js"></script>
 
 <div id="update-review" style="display: bock">
-    <form id="update-review-form-ajax">
-    <h2>Update A Review's Information</h2>
-    <p>Use the search function to locate the correct ID, then update its rating information using this form.</p>
-        <fieldset class="fields">
-            <form class="p-1 mb-1 bg-light border-bottom">
-            <label>Review ID</label> 
-                <select name="review_id" id="selected_review_id">
-                    <option value="">Select a Review ID</option>
-                    {{#each data}}
-                    <option value="{{this.review_id}}">{{this.review_id}}</option>
-                    {{/each}}
-                </select>  
-            <label> Rating: </label>
-                <select name="review_restaurant_rating" id="updated_restaurant_rating">
-                    <option value="">Select a Rating</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                </select>             
-        </fieldset>
-        <input type="submit" id="update-review-form-ajax" value="Update Review">
+<form method="POST" id="update-review-form-ajax">
+<h2>Update A Review's Information</h2>
+<p>Use the search function to locate the correct ID, then update its rating information using this form.</p>
+    <fieldset class="fields">
+        <form class="p-1 mb-1 bg-light border-bottom">
+        <label>Review ID</label> 
+            <select name="review_id" id="selected_review_id">
+                <option value="">Select a Review ID</option>
+                {{#each data}}
+                <option value="{{this.review_id}}">{{this.review_id}}</option>
+                {{/each}}
+            </select>  
+        <label> Rating: </label>
+            <select name="review_restaurant_rating" id="updated_restaurant_rating">
+                <option value="">Select a Rating</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>             
+    </fieldset>
+    <input type="submit" id="update-review-form-ajax" value="Update Review" class="btn btn-primary">
+    <a href="/reviews"><input type="button" value="Cancel" class="btn btn-secondary"></a></p>
     </form><!-- Update Review -->
 </div>
 
